# McSTools

./: .gitignore  README-en.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: blocks.json  blocks_art.json  je_blocks.json
src-tauri/icons/: icon.icns
src-tauri/schematic/: 08baa20e-264d-41d4-8205-4611029936b0.litematic  36fbf6f4-5f07-4370-b4c5-cefdb12c4b92.litematic  384046fd-ac85-4d97-bfca-0d2d41482cab.json  384046fd-ac85-4d97-bfca-0d2d41482cab_type1.json  384046fd-ac85-4d97-bfca-0d2d41482cab_type2.json  3914ec1f-f457-428e-994f-957182d2c8c2.schem  4a4bb16a-9c60-4ef6-a225-b75396b0daf2.schem  68dbb5f8-dd28-46d7-82c1-835a6a4ce6e2.litematic  demo1.litematic  fe7a10c9-72ca-4709-bf79-245b991b73c1.litematic  out.json  out.litematic  out2.litematic  out3.litematic  test.nbt
src-tauri/src/: lib.rs  main.rs  webdav_settings.rs
src-tauri/src/CMS/: get_cms_data.rs  mod.rs
src-tauri/src/be_schematic/: mod.rs
src-tauri/src/building_gadges/: bg_schematic.rs  bg_schematic_data.rs  mod.rs  template_json_representation.rs  to_bg_schematic.rs
src-tauri/src/create/: create_schematic.rs  mod.rs  to_create_schematic.rs
src-tauri/src/data_files/: config.rs  data_flies.rs  files.rs  mod.rs
src-tauri/src/database/: db_control.rs  db_data.rs  mod.rs
src-tauri/src/datebase/: db_api.rs  db_control.rs  mod.rs
src-tauri/src/litematica/: lm_schematic.rs  lm_schematic_data.rs  mod.rs  to_lm_schematic.rs
src-tauri/src/modules/: convert.rs  (+8 more)
(+134 files in other folders)
