[package]
name = "rust"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastnbt =  { version = "2.5.0" }
flate2 = "1.1.0"
thiserror = "2.0.12"
rayon = "1.10.0"
sysinfo = "0.34.2"
base64 = "0.22.1"
regex = "1.11.1"
fastsnbt = "0.2.0"
anyhow = "1.0.97"
rusqlite = { version = "0.34.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
